force-app/main/default/objects/CallRevu_Lead__c/CallRevu_Lead__c.object-meta.xml
<CustomObject>
    <label>CallRevu Lead</label>
    <nameField>
        <label>CallRevu Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CallRevu Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>