force-app/main/default/objects/CallRevu_Lead__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You cannot reference a Permanently Closed location</errorMessage>
        <filterItems>
            <field>Account.Dealer_Status__c</field>
            <operation>notEqual</operation>
            <value>Permanently Closed, Buy/Sell - Permanently Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CallRevu Leads</relationshipLabel>
    <relationshipName>CallRevu_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>