force-app/main/default/objects/CallRevu_Lead__c/fields/Account_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel_Type__c</fullName>
    <formula>TEXT( Account__r.Parent.Channel_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Channel Type</label>
    <type>Text</type>
</CustomField>