force-app/main/default/objects/CallRevu_Lead__c/fields/Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Team__c</fullName>
    <formula>Account__r.Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Team</label>
    <type>Text</type>
</CustomField>