force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Account_Number__c</fullName>
    <formula>Account__r.CallRevu_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallRevu Account Number</label>
    <type>Text</type>
</CustomField>