force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Client_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Client_Account_Status__c</fullName>
    <formula>Contact__r.CallRevu_Client_Account_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CallRevu Client Account Status</label>
    <type>Text</type>
</CustomField>