force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Email_Notification__c</fullName>
    <label>CallRevu Email Notification</label>
    <type>Email</type>
</CustomField>