force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Lead_Channel__c</fullName>
    <label>CallRevu Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Web Form/HubSpot</fullName>
            </value>
            <value>
                <fullName>Outbound Call - RSM</fullName>
            </value>
            <value>
                <fullName>CR Employee</fullName>
            </value>
            <value>
                <fullName>Phone Up</fullName>
            </value>
            <value>
                <fullName>Inbound Call - Direct to RSM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>D&amp;B</fullName>
            </value>
            <value>
                <fullName>Outbound Call – BDR</fullName>
            </value>
            <value>
                <fullName>Outbound Call</fullName>
                <isActive>false</isActive>
                <label>Outbound Call</label>
            </value>
            <value>
                <fullName>Reseller</fullName>
                <isActive>false</isActive>
                <label>Reseller</label>
            </value>
            <value>
                <fullName>Revenue Share</fullName>
                <isActive>false</isActive>
                <label>Revenue Share</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>