force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Lead_Grade__c</fullName>
    <label>CallRevu Lead Grade</label>
    <length>5</length>
    <type>Text</type>
</CustomField>