force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Lead_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CallRevu Lead Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CallRevu_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>