force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Lead_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Lead_Owner_Email__c</fullName>
    <label>CallRevu Lead Owner Email</label>
    <type>Email</type>
</CustomField>