force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Lead_Source__c</fullName>
    <label>CallRevu Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallRevu.com</fullName>
            </value>
            <value>
                <fullName>Trade Show/Convention</fullName>
            </value>
            <value>
                <fullName>Up-Sell</fullName>
            </value>
            <value>
                <fullName>Referral - Dealer</fullName>
            </value>
            <value>
                <fullName>Referral - OEM</fullName>
            </value>
            <value>
                <fullName>Cold Prospecting</fullName>
            </value>
            <value>
                <fullName>Specified Campaign</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Referral - Partner</fullName>
            </value>
            <value>
                <fullName>Reseller – Partner</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>ASOTU</fullName>
            </value>
            <value>
                <fullName>Auto Dealer Association</fullName>
                <isActive>false</isActive>
                <label>Auto Dealer Association</label>
            </value>
            <value>
                <fullName>CRM Partnership</fullName>
                <isActive>false</isActive>
                <label>CRM Partnership</label>
            </value>
            <value>
                <fullName>Customer Management Systems</fullName>
                <isActive>false</isActive>
                <label>Customer Management Systems</label>
            </value>
            <value>
                <fullName>OEM 45 Day Trial</fullName>
                <isActive>false</isActive>
                <label>OEM 45 Day Trial</label>
            </value>
            <value>
                <fullName>OEM 90 Day Trial</fullName>
                <isActive>false</isActive>
                <label>OEM 90 Day Trial</label>
            </value>
            <value>
                <fullName>OEM Approved Program</fullName>
                <isActive>false</isActive>
                <label>OEM Approved Program</label>
            </value>
            <value>
                <fullName>OEM Referral</fullName>
                <isActive>false</isActive>
                <label>OEM Referral</label>
            </value>
            <value>
                <fullName>Print Marketing</fullName>
                <isActive>false</isActive>
                <label>Print Marketing</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Retail 45 Day Trial</fullName>
                <isActive>false</isActive>
                <label>Retail 45 Day Trial</label>
            </value>
            <value>
                <fullName>Win Back</fullName>
                <isActive>false</isActive>
                <label>Win Back</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>