force-app/main/default/objects/CallRevu_Lead__c/fields/CallRevu_Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Lead_Sub_Source__c</fullName>
    <label>CallRevu Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CallRevu_Lead_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Material Download</fullName>
            </value>
            <value>
                <fullName>Schedule Demo</fullName>
            </value>
            <value>
                <fullName>OEM Landing Page</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>More Information</fullName>
            </value>
            <value>
                <fullName>IPC</fullName>
            </value>
            <value>
                <fullName>Group Expansion</fullName>
            </value>
            <value>
                <fullName>New Dealership</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Nissan</fullName>
            </value>
            <value>
                <fullName>Mitz</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>NYSADA</fullName>
            </value>
            <value>
                <fullName>New Prospect</fullName>
            </value>
            <value>
                <fullName>NADA Pre Show</fullName>
            </value>
            <value>
                <fullName>NADA Post Show</fullName>
            </value>
            <value>
                <fullName>NADA at Show</fullName>
            </value>
            <value>
                <fullName>Digital Dealer</fullName>
            </value>
            <value>
                <fullName>20 Group</fullName>
            </value>
            <value>
                <fullName>Existing Dealer Upgrade</fullName>
            </value>
            <value>
                <fullName>Repackaging - At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>