force-app/main/default/objects/CallRevu_Lead__c/fields/Combined_Sources__c.field-meta.xml
<CustomField>
    <fullName>Combined_Sources__c</fullName>
    <description>This is a combination of the Lead Source + Lead Sub Source and if Referral Partner is supplied/entered that is added at the end as well.</description>
    <formula>IF(ISBLANK(Referral_Partner__c),TEXT(CallRevu_Lead_Source__c) &amp;&quot;; &quot;&amp; TEXT(CallRevu_Lead_Sub_Source__c),TEXT(CallRevu_Lead_Source__c) &amp;&quot;; &quot;&amp; TEXT(CallRevu_Lead_Sub_Source__c) &amp;&quot;; &quot;&amp; Referral_Partner__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Sources</label>
    <type>Text</type>
</CustomField>