force-app/main/default/objects/CallRevu_Lead__c/fields/CQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CQL_Date_Time__c</fullName>
    <label>CQL Date/Time</label>
    <type>DateTime</type>
</CustomField>