force-app/main/default/objects/CallRevu_Lead__c/fields/CQL_to_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>CQL_to_In_Progress__c</fullName>
    <formula>(In_Progress_Date__c - CQL_Date_Time__c)  * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CQL to In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>