force-app/main/default/objects/CallRevu_Lead__c/fields/CQL_to_SQL_Time__c.field-meta.xml
<CustomField>
    <fullName>CQL_to_SQL_Time__c</fullName>
    <formula>(SQL_Date_Time__c - CQL_Date_Time__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CQL to SQL Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>