force-app/main/default/objects/CallRevu_Lead__c/fields/Create_MQL_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Create_MQL_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create MQL Cadence</label>
    <type>Checkbox</type>
</CustomField>