force-app/main/default/objects/CallRevu_Lead__c/fields/CRLead_Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>CRLead_Auto_Assign__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CRLead Auto Assign</label>
    <type>Checkbox</type>
</CustomField>