force-app/main/default/objects/CallRevu_Lead__c/fields/Current_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity_Stage__c</fullName>
    <formula>text( Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Opportunity Stage</label>
    <type>Text</type>
</CustomField>