force-app/main/default/objects/CallRevu_Lead__c/fields/Dealer_Group_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Group_Penetration__c</fullName>
    <formula>(IF(AND(Account__r.RecordType.DeveloperName = &quot;Group_Dealer_Account&quot;, ISBLANK(Account__r.ParentId)),(Account__r.Active_Child_Accounts__c/Account__r.Child_Count__c), 0))
+
IF(AND(Account__r.RecordType.DeveloperName = &quot;Dealer&quot;, ISBLANK(Account__r.ParentId)), 0, 0)
+
IF(AND(Account__r.RecordType.DeveloperName = &quot;Dealer&quot;, NOT(ISBLANK(Account__r.ParentId))),(Account__r.Parent.Active_Child_Accounts__c/Account__r.Parent.Child_Count__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Group Penetration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>