force-app/main/default/objects/CallRevu_Lead__c/fields/Duplicate_Date__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Date__c</fullName>
    <label>Duplicate Date</label>
    <type>DateTime</type>
</CustomField>