force-app/main/default/objects/CallRevu_Lead__c/fields/Email_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Alert Sent</label>
    <type>Checkbox</type>
</CustomField>