force-app/main/default/objects/CallRevu_Lead__c/fields/HS_BOFU_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>HS_BOFU_Landing_Page__c</fullName>
    <formula>Contact__r.HS_BOFU_Landing_Page__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS BOFU Landing Page</label>
    <type>Text</type>
</CustomField>