force-app/main/default/objects/CallRevu_Lead__c/fields/HS_City__c.field-meta.xml
<CustomField>
    <fullName>HS_City__c</fullName>
    <formula>Contact__r.HS_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS City</label>
    <type>Text</type>
</CustomField>