force-app/main/default/objects/CallRevu_Lead__c/fields/HS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>HS_Company_Name__c</fullName>
    <formula>Contact__r.HS_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Company Name</label>
    <type>Text</type>
</CustomField>