force-app/main/default/objects/CallRevu_Lead__c/fields/HS_IP_City__c.field-meta.xml
<CustomField>
    <fullName>HS_IP_City__c</fullName>
    <formula>Contact__r.HS_IP_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS IP City</label>
    <type>Text</type>
</CustomField>