force-app/main/default/objects/CallRevu_Lead__c/fields/HS_IP_State_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_IP_State_Region_Code__c</fullName>
    <formula>Contact__r.HS_IP_State_Region_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS IP State/Region Code</label>
    <type>Text</type>
</CustomField>