force-app/main/default/objects/CallRevu_Lead__c/fields/HS_Prospect_is_BOFU_Lead__c.field-meta.xml
<CustomField>
    <fullName>HS_Prospect_is_BOFU_Lead__c</fullName>
    <formula>Contact__r.HS_Prospect_is_BOFU_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Prospect is BOFU Lead</label>
    <type>Checkbox</type>
</CustomField>