force-app/main/default/objects/CallRevu_Lead__c/fields/HS_Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>HS_Recent_Conversion__c</fullName>
    <formula>Contact__r.HS_Recent_Conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Recent Conversion</label>
    <type>Text</type>
</CustomField>