force-app/main/default/objects/CallRevu_Lead__c/fields/HS_Recent_Conversion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HS_Recent_Conversion_Date_Time__c</fullName>
    <label>HS Recent Conversion Date/Time</label>
    <type>DateTime</type>
</CustomField>