force-app/main/default/objects/CallRevu_Lead__c/fields/HS_Role__c.field-meta.xml
<CustomField>
    <fullName>HS_Role__c</fullName>
    <formula>text(Contact__r.HS_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Role</label>
    <type>Text</type>
</CustomField>