force-app/main/default/objects/CallRevu_Lead__c/fields/HS_State_Region__c.field-meta.xml
<CustomField>
    <fullName>HS_State_Region__c</fullName>
    <formula>HS_IP_State_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS State/Region</label>
    <type>Text</type>
</CustomField>