force-app/main/default/objects/CallRevu_Lead__c/fields/HubSpot_Lead__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HubSpot Lead</label>
    <type>Checkbox</type>
</CustomField>