force-app/main/default/objects/CallRevu_Lead__c/fields/In_Progress_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Date__c</fullName>
    <label>In Progress Date</label>
    <type>DateTime</type>
</CustomField>