force-app/main/default/objects/CallRevu_Lead__c/fields/In_Progress_to_Bad_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_to_Bad_Unqualified__c</fullName>
    <formula>Unqualified_Date__c - DATEVALUE(In_Progress_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress to Bad/Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>