force-app/main/default/objects/CallRevu_Lead__c/fields/In_Progress_to_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_to_Duplicate__c</fullName>
    <formula>Duplicate_Date__c -  In_Progress_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress to Duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>