force-app/main/default/objects/CallRevu_Lead__c/fields/In_Progress_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_to_Opportunity__c</fullName>
    <formula>Opportunity_Created_Date__c - DATEVALUE(In_Progress_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress to Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>