force-app/main/default/objects/CallRevu_Lead__c/fields/In_Progress_to_Warm__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_to_Warm__c</fullName>
    <formula>Warm_Date__c - In_Progress_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress to Warm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>