force-app/main/default/objects/CallRevu_Lead__c/fields/Initial_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Date_Time__c</fullName>
    <label>Initial Response Date/Time</label>
    <type>DateTime</type>
</CustomField>