force-app/main/default/objects/CallRevu_Lead__c/fields/Initial_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_Time__c</fullName>
    <formula>( Initial_Response_Date_Time__c -  CreatedDate ) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Response Time (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>