force-app/main/default/objects/CallRevu_Lead__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>IF(TEXT(Status__c) = &apos;Not Interested&apos;, TRUE,
IF(TEXT(Status__c) = &apos;Bad Lead/Unqualified&apos;, TRUE,
IF(TEXT(Status__c) = &apos;Duplicate&apos;, TRUE,
IF(TEXT(Status__c) = &apos;Closed Won&apos;, TRUE,
IF(TEXT(Status__c) = &apos;Closed Lost&apos;, TRUE,
IF(TEXT(Status__c) = &apos;Nurturing&apos;, TRUE,
FALSE))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>