force-app/main/default/objects/CallRevu_Lead__c/fields/KJTest__c.field-meta.xml
<CustomField>
    <fullName>KJTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KJTest</label>
    <type>Checkbox</type>
</CustomField>