force-app/main/default/objects/CallRevu_Lead__c/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <formula>text( Contact__r.Lifecycle_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifecycle Stage</label>
    <type>Text</type>
</CustomField>