force-app/main/default/objects/CallRevu_Lead__c/fields/Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to manually override automation workflow for lead assignment</inlineHelpText>
    <label>Manual Override</label>
    <type>Checkbox</type>
</CustomField>