force-app/main/default/objects/CallRevu_Lead__c/fields/MQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date_Time__c</fullName>
    <label>MQL Date/Time</label>
    <type>DateTime</type>
</CustomField>