force-app/main/default/objects/CallRevu_Lead__c/fields/MQL_to_Close__c.field-meta.xml
<CustomField>
    <fullName>MQL_to_Close__c</fullName>
    <formula>Opportunity_Closed_Date__c - DATEVALUE(MQL_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>