force-app/main/default/objects/CallRevu_Lead__c/fields/MQL_to_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>MQL_to_In_Progress__c</fullName>
    <formula>In_Progress_Date__c -  MQL_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL to In Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>